--- a/LibYourself/packages.config
+++ b/LibYourself/packages.config
@@ -6,4 +6,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.x86" version="1.0.109.0" targetFramework="net461" />
 </packages>
