--- a/LibYourself/LibYourself.csproj
+++ b/LibYourself/LibYourself.csproj
@@ -91,6 +91,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="renameTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="renameTable.Designer.cs">
+      <DependentUpon>renameTable.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="addItem.resx">
       <DependentUpon>addItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -112,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="renameTable.resx">
+      <DependentUpon>renameTable.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="database\books.db" />
     <None Include="database\DataTable.db" />
     <None Include="packages.config" />
