--- a/LibYourself/LibYourself.csproj
+++ b/LibYourself/LibYourself.csproj
@@ -123,6 +123,7 @@
     </EmbeddedResource>
     <None Include="database\books.db" />
     <None Include="database\DataTable.db" />
+    <None Include="database\Favorites.db" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
