--- a/LibYourself/LibYourself.csproj
+++ b/LibYourself/LibYourself.csproj
@@ -122,8 +122,12 @@
       <DependentUpon>renameTable.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="database\books.db" />
-    <None Include="database\DataTable.db" />
-    <None Include="database\Favorites.db" />
+    <None Include="database\DataTable.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="database\Favorites.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
